frontend-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - frontend.51.105.149.233.xip.io
    secretName: frontend-tls-secret
  rules:
  - host: frontend.51.105.149.233.xip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
